Fixed button appearance on mobile.

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,54 +1,54 @@
 body {
-	/*padding-left: 20px;*/
-	/*padding-right: 20px;*/
+    /*padding-left: 20px;*/
+    /*padding-right: 20px;*/
 }
 
 #container {
-	width: 830px;
-	margin: auto;
-	padding-left: 15px;
-	padding-right: 15px;
+    width: 830px;
+    margin: auto;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .col {
-	/*width: 100%;*/
+    /*width: 100%;*/
 }
 
 #header {
-	padding-top: 20px;
-	text-align: center;
+    padding-top: 20px;
+    text-align: center;
 }
 
 #title {
-	/*float: left;*/
-	height: 120px;
+    /*float: left;*/
+    height: 120px;
 }
 
 #subtitle {
-	/*float: left;*/
-	/*text-align: center;*/
-	/*margin-left: 30px;*/
-	/*margin-top: 10px;*/
-	font-size: 24px;
-	color: #777777;
+    /*float: left;*/
+    /*text-align: center;*/
+    /*margin-left: 30px;*/
+    /*margin-top: 10px;*/
+    font-size: 24px;
+    color: #777777;
 }
 
 #description {
-	margin-bottom: 30px;
+    margin-bottom: 30px;
 }
 
 #description p {
-	font-size: 18px;
-	margin-top: 0px;
-	margin-bottom: 0px;
+    font-size: 18px;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 .current-step {
-	color: black;
+    color: black;
 }
 
 .other-step {
-	color: #777777;
+    color: #777777;
 }
 
 #widthSlider {
@@ -59,40 +59,40 @@ body {
 
 #loader {
     height: 300px;
-	/*border: 4px dashed gray;*/
-	border-radius: 10px;
-	font-size: 20px;
-	color: #777777;
-	text-align: center;
-	padding-top: 100px;
+    /*border: 4px dashed gray;*/
+    border-radius: 10px;
+    font-size: 20px;
+    color: #777777;
+    text-align: center;
+    padding-top: 100px;
 }
 
 #loader p {
-	/*margin: auto;*/
+    /*margin: auto;*/
 }
 
-#loader div {
-	overflow: hidden;
-	position: relative;
+#loader button {
+    overflow: hidden;
+    position: relative;
 }
 
 #fileBrowser {
-	height: 100%;
-	position: absolute;
-	top: 0;
-	right: 0;
-	z-index: 99;
-	opacity: 0;
-	-moz-opacity: 0;
-	cursor: pointer;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 99;
+    opacity: 0;
+    -moz-opacity: 0;
+    cursor: pointer;
 }
 
 #toolbar {
-/*	height: 50px;*/
+    /*	height: 50px;*/
 }
 
 #buttons .btn {
-	margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 a.btn {
@@ -101,10 +101,10 @@ a.btn {
 }
 
 #spinner {
-	width: 20px;
-	height: 20px;
-	margin-right: 10px;
-	-webkit-animation: spin 0.75s linear infinite;
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+    -webkit-animation: spin 0.75s linear infinite;
     -moz-animation: spin 0.75s linear infinite;
     animation: spin 0.75s linear infinite;	
 }
@@ -113,83 +113,83 @@ a.btn {
 @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
 
 #palette {
-	min-height: 70px;
-	font-size: 0px;
+    min-height: 70px;
+    font-size: 0px;
 }
 
 .swatch {
-	/*float: left;*/
-	display: inline-block;
-	margin: 10px;
-	width: 50px;
-	height: 50px;
-	border: 1px solid black;
-	border-radius: 10px;
+    /*float: left;*/
+    display: inline-block;
+    margin: 10px;
+    width: 50px;
+    height: 50px;
+    border: 1px solid black;
+    border-radius: 10px;
 }
 
 .swatch img {
-/*	display: none;*/
-	float: right;
-	margin: 1px;
-	width: 20px;
-	height: 20px;
+    /*	display: none;*/
+    float: right;
+    margin: 1px;
+    width: 20px;
+    height: 20px;
 }
 
 .swatch:hover img {
-/*	display: block;*/
+    /*	display: block;*/
 }
 
 .swatch img:hover {
-	cursor: pointer;
+    cursor: pointer;
 }
 
 .swatch-label {
-	background-color: white;
-	color: black;
-	width: 20px;
-	height: 20px;
-	font-size: 14px;
-	text-align: center;
-	/*margin: 2px;*/
-	position: relative;
-	top: 2px;
-	left: 2px;
-	border-radius: 2px;
+    background-color: white;
+    color: black;
+    width: 20px;
+    height: 20px;
+    font-size: 14px;
+    text-align: center;
+    /*margin: 2px;*/
+    position: relative;
+    top: 2px;
+    left: 2px;
+    border-radius: 2px;
 }
 
 
 #color-info > .btn {
-	margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 
 .canvas-container {
-	width: 100%;
-	height: 100%;
-	position: relative;
-	padding: 0px;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    padding: 0px;
 }
 
 #canvases {
-	overflow: scroll;
+    overflow: scroll;
 }
 
 canvas {
-	position: absolute;
+    position: absolute;
 }
 
 .sample-point {
-	width: 10px;
-	height: 10px;
-	border-radius: 100%;
-	border: 2px solid red;
-	position: absolute;
+    width: 10px;
+    height: 10px;
+    border-radius: 100%;
+    border: 2px solid red;
+    position: absolute;
 }
 
 #footer {
-	padding-top: 50px;
-	padding-bottom: 10px;
-	/*padding-left: 0px;*/
-	/*padding-right: 0px;*/
-	color: #777777;
+    padding-top: 50px;
+    padding-bottom: 10px;
+    /*padding-left: 0px;*/
+    /*padding-right: 0px;*/
+    color: #777777;
 }
